--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vue-cli-service build"
   },
   "main": "index.js",
   "dependencies": {
